# esp32-blackbox

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  README.zh.md  README_CN.md  build.py  build_target.bat  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32c6
.github/workflows/: build.yml
components/json/: CMakeLists.txt
docs/: architecture.md  design.md  usage.md
docs/en/: architecture.md  design.md  usage.md
docs/zh/: architecture.md  design.md  usage.md
main/: AGENTS.md  CMakeLists.txt  Kconfig.projbuild  board_test.c  board_test.h  config_manager.c  config_manager.h  led_strip_encoder.c  led_strip_encoder.h  main.c  metrics_server.c  metrics_server.h  probe_dns.c  probe_http.c  probe_icmp.c  probe_icmp.h  probe_manager.c  probe_manager.h  probe_tcp.c  probe_types.h  probe_ws.c  status_led.c  status_led.h  web_server.c  web_server.h  wifi_config_server.c  wifi_config_server.h  wifi_manager.c  wifi_manager.h
